--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="header">
             <h1>Today is your birthday 🎉</h1>
-            <img id="bff-img" src="images/WhatsApp Image 2025-10-01 at 12.26.52 AM.jpeg" alt="Birthday Image">
+            <img id="bff-img" src="images/Screenshot 2025-10-01 at 9.20.52 PM.png" alt="Birthday Image">
             <h2 id="bday-age">69 years old</h2>
             <h4 id="bday-date">01.10.2025</h4>
         </div>
